--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <h1>this is home page</h1>
     <h2>Welcome to home page.....</h2>
+    <header>
+        <h1>this is header</h1>
+    </header>
     <a href="./about.html">About</a>
     <a href="./service.html">Service</a>
     
